@@ -1,0 +1,11 @@
+---
+title: Excerpt Separator in Markdown
+layout: post
+---
+This is part of the excerpt.
+
+This is also part of the excerpt.
+
+<!--more-->
+
+This is not part of the excerpt.
